--- a/deckblatt.tex
+++ b/deckblatt.tex
@@ -43,7 +43,7 @@ Modul WIN03 --- \=Innovative Themen der Wirtschaftsinformatik\\
 
 Betreuer: \Betreuer
 
-Entwurf vom \today %%Datum der Abgabe - am besten selbst reinschreiben.
+\today %%Datum der Abgabe - am besten selbst reinschreiben.
 
 \vfill
 
