--- a/einleitung.tex
+++ b/einleitung.tex
@@ -11,12 +11,10 @@ Die steigende Menge der Daten macht eine systematische Aufbereitung der anfallen
 
 \textbf{Ziel dieser Arbeit ist es, die momentanen Entwicklungen der Datenbeständen hin zum semantischen Web und deren Auswirkungen auf Wirtschaft und Gesellschaft mit den durch die Industrielle Nutzung des Öls im 20. Jahrhundert zu vergleichen.}
 
-Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit relevanten Begriffe und Konzepte definiert, bevor im Kapitel~\myref{sec:hauptteil} die Auswirkungen der Technologien auf Wirtschaft und Gesellschaft beschrieben werden.
-
-\todo{An die tatsächliche Arbeit anpassen}
+Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit relevanten Begriffe und Konzepte definiert, bevor im Kapitel~\myref{sec:hauptteil} die Auswirkungen der Technologien auf Wirtschaft und Gesellschaft beschrieben und in Abschnitt~\myref{vergleich} mit denen des Öls verglichen werden.
 
 \subsection{Abgrenzung}
 
 Der Augenmerk dieser Arbeit liegt auf den behandelten Konzepten und Technologien der Informationstechnologie. Die Entsprechungen in der Ölindustrie werden nicht in der gleichen Tiefe erörtert und belegt werden, sondern beschränken sich auf generelle Aussagen und Ansichten.
 
-\todo{An die tatsächliche Arbeit anpassen}
+Ebenfalls werden Themenbereiche wie \buzz{Internet of Things}, \buzz{Ubiquitous Computing} oder \buzz{Life Tracking} als scheinbar unerschöpfliche Datenquellen angesehen, ohne dass sie genauer untersucht werden\footnote{Siehe hierzu auch Abschnitt~\myref{ausblick}}.
