--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -27,7 +27,7 @@ Durch die Technologien des \buzz{Web 2.0} werden die Daten i.d.R. in Datenbanken
 
 „\buzz{Semantik}, auch \buzz{Bedeutungslehre}, nennt man die Theorie oder Wissenschaft von der Bedeutung der Zeichen. Zeichen können in diesem Fall Wörter, Phrasen oder Symbole sein. Die Semantik beschäftigt sich typischerweise mit den Beziehungen zwischen den Zeichen und den Bedeutungen dieser Zeichen.“\footnote{cite{wp:semantik}}
 
-Im \buzz{Web 3.0} werden die Daten bzw. Informationen des Web 2.0 durch Beifügung von Bedeutung zu Information bzw. informativem Wissen veredelt\footnote{vgl. \cite{nyt:markoff}}. Hierdurch soll es möglich werden, die schnell steigenden Datenmengen sinnvoll zu nutzen\footnote{vgl. \cite{tsp:tolksdorf}}. Die Bezeichnung \buzz{semantisches Web} ermöglicht eine Abgrenzung gegenüber anderen Interpretationen des Buzzwords \buzz{Web 3.0}, wie sie z.T. im Marketing\footnote{z.B. „Web 3.0 marketing is the convergence of new technologies and rapidly changing consumer buying trends.“ in \cite{web3market}, Abschnitt „What is Web 3.0 Marketing?“} oder in der Politikwissenschaft\footnote{z.B. „Is this Web 3.0? Not a tech-upgrade, a smarter algorithm, slicker fibre optic or better Bluetooth beam. Instead, Web 3.0 as in an outcome, the demonstrated consequences of being able to access information?“ in \cite{web3pol}, Abschnitt „Web 3.0: Regime Change“} zu finden sind.
+Im \buzz{Web 3.0} werden die Daten bzw. Informationen des Web 2.0 durch Beifügung von Bedeutung zu Information bzw. informativem Wissen veredelt\footnote{vgl. \cite{nyt:markoff}}. Hierdurch soll es möglich werden, die schnell steigenden Datenmengen sinnvoll zu nutzen\footnote{vgl. \cite{tsp:tolksdorf}}. Die Bezeichnung \buzz{semantisches Web} ermöglicht eine Abgrenzung gegenüber anderen Interpretationen des Begriffs \buzz{Web 3.0}, wie sie z.T. im Marketing\footnote{z.B. „Web 3.0 marketing is the convergence of new technologies and rapidly changing consumer buying trends.“ in \cite{web3market}, Abschnitt „What is Web 3.0 Marketing?“} oder in der Politikwissenschaft\footnote{z.B. „Is this Web 3.0? Not a tech-upgrade, a smarter algorithm, slicker fibre optic or better Bluetooth beam. Instead, Web 3.0 as in an outcome, the demonstrated consequences of being able to access information?“ in \cite{web3pol}, Abschnitt „Web 3.0: Regime Change“} zu finden sind.
 
 \subsection{Die Bedeutung der Daten}
 
@@ -41,7 +41,7 @@ Durch Regelwerke, hinterlegte Logik, Verknüpfungen und standardisiertem Datenau
 Person A ist auf einem Bild zusammen mit Person B zu sehen (Gesichtserkennung). Die Geoinformation und Uhrzeit (EXIF--Tags) zeigen, dass das Foto auf einer Veranstaltung aufgenommen wurde, das zu diesem Zeitpunkt an diesem Ort statt fand (Semantisches Markup der Veranstaltung).
 Daraus kann auf politische Gesinnung, Musikgeschmack und/oder Trinkfreudigkeit von Person A geschlossen werden.
 
-
+Dieser hier nur grob skizzierte, auf den Spezialfall zugeschnittene Pfad von den Daten zum Wissen kann durch verschiedene Elemente des Web 3.0 Werkzeugkastens\footnote{Web 3.0 Stack} allgemein formuliert und abgebildet werden. Hier sind beginnend von den datennahen Schichten zur Identifikation und Beschreibung von Objekten über den Datenaustausch, Abfragesprachen und Regelwerke bis hin zu den obersten Schichten der vereinheitlichen Logik, automatischer Beweisführung und dem darauf aufbauenden Vertrauen in das generierte Wissen alle relevanten Bereiche abgedeckt.
 
 \begin{figure}[H]
 \begin{center}
