--- a/hauptteil.tex
+++ b/hauptteil.tex
@@ -1,4 +1,4 @@
-\section{Hauptteil}
+\section{Web 3.0 --- Das Semantische Web}
 \label{sec:hauptteil}
 
 \subsection{Auswirkungen des Semantischen Webs auf die Gesellschaft}
@@ -16,7 +16,7 @@ Schon heute drehen sich die meisten der regelmäßig ausgeführtem Aktivitäten 
 
 Unter den Top 10 der regelmäßig durchgeführten Tätigkeiten der Befragten im Web finden sich die informationsorientierten Tätigkeiten „nach Inhalten/Informationen suchen“ auf Platz eins, „über aktuelle Ereignisse des Wohnorts informieren“ auf Platz 6 und die Erfassung eigener Daten auf Platz 10\footnote{vgl. \cite{d21}, Seite 37}. Weitere Tätigkeiten wie „Soziale Netzwerke nutzen“ (Platz 7) bzw. „Online--Videos ansehen“ (Platz 3) sowie „Online--Shopping“ (Platz 2) nutzen Internetangebote, die per Design sehr gut mit Taxonomien, Meta--Daten und Verknüpfungen ausgestattet sind.
 
-In den TV--Werbespots von Google und Apple werden Verbraucher gezielt auf entsprechend Formulierte Anfragemöglichkeiten hingewiesen\footnote{z.B. „Ok Google, zeig mir mal den schnellsten Weg in den Münchner Tierpark?“, \cite{okg:tierpark}}. Somit werden die Möglichkeiten wie Routenplanung, Musiktitelerkennung, Wettervorhersage und andere, die schon heute durch einzelne Anwendungen zur Verfügung gestellt werden in einer Oberfläche Gebündelt und in das Bewusstsein der Verbraucher gebracht.
+In den TV--Werbespots von Google und Apple werden Verbraucher gezielt auf entsprechend formulierte Anfragemöglichkeiten hingewiesen\footnote{z.B. „Ok Google, zeig mir mal den schnellsten Weg in den Münchner Tierpark?“, \cite{okg:tierpark}}. Somit werden die Möglichkeiten wie Routenplanung, Musiktitelerkennung, Wettervorhersage und andere, die schon heute durch einzelne Anwendungen zur Verfügung gestellt werden in einer Oberfläche Gebündelt und in das Bewusstsein der Verbraucher gebracht.
 
 \label{probleme}
 Neben dem offensichtlichen Nutzen des \ac{WWW} bringt die Entwicklung des Webs auch negative Auswirkungen auf die Gesellschaft. 
@@ -30,18 +30,28 @@ Schon heute haben Unternehmen erkannt, dass es nicht ausreicht, immer mehr Daten
 
 Schon in der Vergangenheit haben Fortschritte in der Daten-- und Informationsbearbeitung erhebliche Auswirkungen auf die Wirtschaft gehabt. So war die Entwicklung der Telegraphie ein wichtiger Schritt für die Meteorologie, da hiermit zeitnahe Datensammlung und Auswertung möglich wurde. Als Resultat waren Wettervorhersagen für die Schiff{}fahrt möglich. Mit steigender Datenmenge und immer noch wachsender Verarbeitungsgeschwindigkeit werden im Zusammenspiel mit dem Fortschritten des semantischen Webs auch in anderen Bereichen immer treffendere Analysen und Vorhersagen möglich werden. 
 
-Auch jenseits von Vorhersagen sind durch die Datenverarbeitung im großen Stil neue bzw. verbesserte Produkte möglich. Als Beispiele sind hier die Jacht „Oracle“ zu nennen, die durch Datenverarbeitung in Echtzeit zu einem hocheffizienten Segelschiff wurde\footnote{\todo{Quelle!}}, Herzschrittmacher, die Patientendaten beobachten um bei Bedarf als Defibrilator zu handeln\footnote{\todo{Quelle!}} oder der ganze Bereich der Ferndiagnostik und --wartung bei Maschinen\footnote{Stichwort: Internet of Things} --- und auch Menschen.
+Auch jenseits von Vorhersagen sind durch die Datenverarbeitung im großen Stil neue bzw. verbesserte Produkte möglich. Als Beispiele sind hier die Jacht „BMW Oracle“ zu nennen, die durch Datenverarbeitung in Echtzeit zu einem hocheffizienten Segelschiff wurde\footnote{vgl. \cite{laudon}, Seite 59f}, Herzschrittmacher, die Patientendaten beobachten um nur bei Bedarf als Taktgeber oder Defibrilator zu handeln\footnote{vgl. \cite{froeling}, Seite 146} oder der ganze Bereich der Ferndiagnostik und --wartung bei Maschinen und auch Menschen\footnote{Internet of Things und Ubiquitous Computing bzw. Life Tracking}.
 
 Die wie auf Seite \pageref{probleme} beschriebenen, weit verbreiteten und zum Teil großen Befürchtungen stellen Herausforderungen an die Unternehmen dar. Neue Technologien und Anwendungen ebendieser sollten so entworfen und kommuniziert werden, dass Verbrauchen ihnen vertrauen können.
 
 Es sind also auch erhebliche Auswirkungen auf die Wirtschaft zu erwarten, sowohl durch Optimierung vorhandener Produkte und Dienstleitungen aber auch durch Neuentwicklungen.
 
 \subsection{Vergleich der Auswirkungen mit denen des Öls}
+\label{vergleich}
 
 Daten und Öl bilden die Grundlage für Produkte bzw. Dienstleistungen. Große Teile der Wirtschaft sind direkt von ihnen abhängig. Noch größer dürfte die indirekte Abhängigkeit vom Öl sein, die sich durch sämtliche Branchen und auch auf private Haushalte erstreckt. Eine solche Abhängigkeit ist für Daten bereits zu erahnen.
 
-Rohöl ist ein Rohstoff für verschiedene Produktarten wie z.B. Kunststoff, Schmierstoffe oder Treibstoffe. Auch wird es als Hilfs-- bzw. Betriebsstoff in der Industrie eingesetzt und macht so weitere Produkte möglich. Gleiches gilt für Daten: Oft sind die mit Hilfe künstlicher Intelligenz\footnote{im Englischen Wortsinn von Informationsbeschaffung} erzielten Informationen direkt das gewünschte Produkt. Andererseits könnten diese Informationen auch nur wie ein Betriebsstoff dafür sorgen, dass andere Prozesse besser ablaufen.
+Rohöl kann als Roh--, Hilfs-- und Betriebsstoff bei der Erzeugung unterschiedlichster Produktarten wie z.B. Kunststoff, Schmierstoffe, Kosmetika oder Treibstoffe. Gleiches gilt für Daten: Oft sind die mit Hilfe künstlicher Intelligenz\footnote{im Englischen Wortsinn von Informationsbeschaffung} erzielten Informationen direkt das gewünschte Produkt. Andererseits könnten diese Informationen auch nur wie ein Betriebsstoff dafür sorgen, dass andere Prozesse besser ablaufen.
 
-Auch die Entwicklung der zur Verfügung stehenden Menge stellt sowohl beim Öl als auch bei Daten ein Problem dar: Während Ölvorkommen endlich sind, und somit nach Alternativen geforscht werden muss, werden Daten in ihrer Unendlichkeit\footnote{Mit jedem erfasstem Datum entstehen weitere erfassbare Daten, wie z.B. Speicherort} mit steigender Menge schwerer zu Verarbeiten. Somit muss die Wirtschaft lernen mit weniger Öl, aber mit mehr Daten zurechtzukommen.
+Auch die Entwicklung der zur Verfügung stehenden Menge stellt sowohl beim Öl als auch bei Daten ein Problem dar: Während Ölvorkommen endlich sind, und somit nach Alternativen geforscht werden muss, werden Daten in ihrer Unendlichkeit\footnote{Mit jedem erfasstem Datum entstehen weitere erfassbare Daten, wie z.B. Speicherort und Erhebungszeitpunkt} mit steigender Menge schwerer zu Verarbeiten. Somit muss die Wirtschaft lernen mit weniger Öl, aber mit mehr Daten zurechtzukommen.
 
-Eine weitere Gemeinsamkeit zeigt sich bei historischer Betrachtung: Sowohl Öl als auch Daten sind schon lange vor ihrer industriellen Nutzung entdeckt und genutzt worden. Dies gilt für Rohöl (z.B. als Bau und Brennstoff\footnote{\todo{Quelle!}}) als auch für Daten (z.B. zur Wetter und Flutvorhersage durch den hundertjärigen Kalender\footnote{\todo{Quelle!}} oder die frühen Verschlüselungstechniken\footnote{\todo{Quelle!}}). Jedoch bedurfte es einem bestimmten Stand der Technik, ab dem die Einsatzzwecke dann sprunghaft anstiegen.
+Eine weitere Gemeinsamkeit zeigt sich bei historischer Betrachtung: Sowohl Öl als auch Daten und ihre Verarbeitung sind schon lange vor ihrer industriellen Nutzung genutzt worden. Dies gilt für Rohölprodukte (z.B. als Bau und Brennstoff\footnote{vgl. \cite{pressler}, Abschnitt 2.1}) als auch für Daten (z.B. zur Wettervorhersage durch den hundertjärigen Kalender\footnote{vgl. \cite{dwd} bzw. \cite{knauer100}, Seite 1: „Erklärungen über die Beschaffenheit, Gestalt und Bewegung unserer Erde und die anderen Weltkörper, über die besonderen Naturerscheinungen, und über das ganze Weltwissen überhaupt; dann über die Witterungsvorhersagung nach den besten Bauernregeln und sichersten Wetteranzeigen,…“} oder die frühen Verschlüselungstechniken\footnote{\cite{suetonius}, Abschnitt 56.6: „… wenn etwas Geheimes zu überbringen war, schrieb er in Zeichen, das heißt, er ordnete die Buchstaben so, dass kein Wort gelesen werden konnte: Um diese zu lesen, tauscht man den vierten Buchstaben, also D für A aus und ebenso mit den restlichen.“}). Jedoch bedurfte es einem bestimmten Stand der Technik, ab dem die Einsatzzwecke dann sprunghaft anstiegen.
+
+\subsection{Einschätzungen der Politik}
+\label{politik}
+
+Von Politikern auf verschiedenen Ebenen wir der Themenbereich \buzz{Big Data} als sehr wichtige Wachstumsfeld eingeschätzt. So erklärt z.B. die EU--Kommissarin für die Digitale Agenda Needie Kroes: „Daten sind Antrieb und Grundlage für die Wirtschaft der Zukunft. Organisationen jeder Art [...] benötigen Daten als Bausteine, um leitstungsfähiger zu werden.“\footnote{Zitiert nach \cite{bd25}} und rechnet mit 100.000 neuen Arbeitsplätzen in der Datenverarbeitungsbranche. Durch ein Förderprogramm in Höhe von 2,5 Milliarden Euro soll die soll die Entwicklung von Techniken und Diensten zur Verarbeitung großer Datenmengen durch Einsatz von künstlicher Intelligenz gefördert werden.\footnote{vgl. \cite{bd25}}
+
+Das Umwelt--Bundesamt kümmert sich um Nachhaltigkeit nicht nur bei der Hardware, sondern auch bei Software und den erhobenen Daten. „Wachsende Datenmengen und überdimensionierte Programme erfordern den beständigen Ausbau von IT-Netzen, Datenspeichern und Rechenkapazitäten. Höchste Zeit also, die Diskussion über Nachhaltige Software anzustoßen.“\footnote{\cite{fns}} 
+
+Somit werden in der Politik in der Politik die gleichen Ziele verfolgt wie in der Ölbranche: Sicherung bzw. Steigerung des Marktanteils, Erzielung von möglichst positiven Effekten auf den Arbeitsmarkt sowie die bestmögliche Vermeidung der negativen Auswirkungen auf Umwelt und Gesellschaft.
