--- a/literatur.bib
+++ b/literatur.bib
@@ -2,19 +2,92 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-11 15:41:13 +0100 
+%% Created for Stefan Waidele at 2014-11-11 23:28:25 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@misc{fns,
+	Author = {Marina K{\"o}hn},
+	Date-Added = {2014-11-11 22:10:30 +0000},
+	Date-Modified = {2014-11-11 22:12:01 +0000},
+	Howpublished = {\url{http://oekotop100.de/software/wp-content/uploads/2014/10/Einladung_Fachgespraech_Nachhaltige_Software_am_28-11-2014.pdf}, abgerufen am 11.11.2014},
+	Month = {11},
+	Title = {Einladung zum Fachgespr{\"a}ch Nachhaltige Software},
+	Year = {2014}}
+
+@article{bd25,
+	Author = {Peter--Michael Ziegler},
+	Date-Added = {2014-11-11 21:50:41 +0000},
+	Date-Modified = {2014-11-11 22:28:23 +0000},
+	Journal = {{c't Magazin, Heft 24 vom 01.11.}},
+	Month = {11},
+	Pages = {52},
+	Title = {2,5 Milliarden Euro f{\"u}r die Big--Data--Forschung},
+	Year = {2014}}
+
+@book{froeling,
+	Address = {Stuttgart},
+	Author = {Gerd Fr{\"o}hling AND J{\"o}rg Carlson},
+	Date-Added = {2014-11-11 19:02:14 +0000},
+	Date-Modified = {2014-11-11 21:17:53 +0000},
+	Publisher = {Georg Thieme Verlag},
+	Title = {Herzschrittmacher-- und Defibrilator--Therapie},
+	Year = {2006}}
+
+@book{laudon,
+	Address = {London},
+	Author = {Kenneth Laudon AND Jane Laudon},
+	Date-Added = {2014-11-11 18:51:45 +0000},
+	Date-Modified = {2014-11-11 21:16:55 +0000},
+	Edition = {tenth, international},
+	Publisher = {Pearson},
+	Title = {Essentials of Management Information Systems},
+	Year = {2013}}
+
+@book{suetonius,
+	Author = {Suetonius},
+	Date-Added = {2014-11-11 18:33:46 +0000},
+	Date-Modified = {2014-11-11 18:34:42 +0000},
+	Editor = {Ihm, Max},
+	Publisher = {in aedibvs B. G. Tevbneri},
+	Title = {Divus Julius},
+	Year = {1908}}
+
+@misc{dwd,
+	Author = {{Deutscher Wetterdienst (Hrsg.)}},
+	Date-Added = {2014-11-11 18:26:55 +0000},
+	Date-Modified = {2014-11-11 18:43:01 +0000},
+	Howpublished = {\url{http://www.deutscher-wetterdienst.de/lexikon/index.htm?ID=H&DAT=Hundertjaehriger_Kalender}, abgerufen am 11.11.2014},
+	Title = {Hundertj{\"a}hriger Kalender},
+	Year = {2014}}
+
+@misc{knauer100,
+	Author = {Moriz Knauer},
+	Date-Added = {2014-11-11 17:59:12 +0000},
+	Date-Modified = {2014-11-11 18:39:00 +0000},
+	Howpublished = {\url{http://www.meinbezirk.at/mauterndorf/kultur/grosser-hundertjaehriger-kalender-1800-1900-innenseite-1-m4081937,543393.html}, abgerufen am 11.11.2014},
+	Publisher = {Franz Ferst'sche Buchhandlung, Graz},
+	Title = {Gro{\ss}er hundertj{\"a}hriger Kalender f{\"u}r das neunzehnte Jahrhundert}}
+
+@techreport{pressler,
+	Author = {Carola Pre{\ss}ler},
+	Date-Added = {2014-11-11 17:39:28 +0000},
+	Date-Modified = {2014-11-11 18:49:14 +0000},
+	Institution = {Philipps--Universit{\"a}t Marburg},
+	Month = {01},
+	Title = {{Protokoll zum Experimentalvortrag „Erd{\"o}l und Erd{\"o}lprodukte``}},
+	Year = {2000}}
+
 @misc{okg:tierpark,
+	Author = {Google},
 	Date-Added = {2014-11-11 14:01:21 +0000},
-	Date-Modified = {2014-11-11 14:03:08 +0000},
+	Date-Modified = {2014-11-11 21:22:36 +0000},
 	Howpublished = {\url{http://www.youtube.com/watch?v=Hay3d5g4_fI}, abgerufen am 11.11.2014},
 	Month = {06},
-	Title = {TV--Werbespot: Google Bonobo},
+	Title = {{TV--Werbespot: Google Bonobo}},
 	Year = {2014}}
 
 @misc{wp:stasi,
@@ -44,9 +117,9 @@
 	Year = {2012}}
 
 @book{d21gov,
-	Author = {{Initiative D21 et al. (Hrgb.)}},
+	Author = {{Initiative D21 et al. (Hrsg.)}},
 	Date-Added = {2014-11-08 06:23:00 +0000},
-	Date-Modified = {2014-11-08 06:24:12 +0000},
+	Date-Modified = {2014-11-11 22:21:36 +0000},
 	Publisher = {Initiative D21 e.V.},
 	Title = {eGovernment Monitor 2014},
 	Year = {2014}}
@@ -80,9 +153,9 @@
 
 @book{d21,
 	Address = {Berlin},
-	Author = {{Initiative D21 et al. (Hrgb.)}},
+	Author = {{Initiative D21 et al. (Hrsg.)}},
 	Date-Added = {2014-11-07 22:25:48 +0000},
-	Date-Modified = {2014-11-07 23:18:19 +0000},
+	Date-Modified = {2014-11-11 18:47:14 +0000},
 	Publisher = {Initiative D21 e.V.},
 	Title = {Die Entwicklung der digitalen Gesellschaft in Deutschland},
 	Year = {2014},
@@ -91,8 +164,8 @@
 @book{web3pol,
 	Author = {Simon Pont},
 	Date-Added = {2014-11-05 18:48:56 +0000},
-	Date-Modified = {2014-11-05 18:49:54 +0000},
-	Edition = {Web--Edition},
+	Date-Modified = {2014-11-11 18:48:38 +0000},
+	Edition = {Web},
 	Month = {11},
 	Publisher = {Kogan Page},
 	Title = {The Better Mousetrap},
@@ -162,8 +235,8 @@
 	Annote = {http://www.wissenschaftsforschung.de/JB00_9-88.pdf},
 	Author = {Klaus Fuchs--Kittowski},
 	Date-Added = {2014-11-03 21:08:55 +0000},
-	Date-Modified = {2014-11-03 22:16:17 +0000},
-	Edition = {2. Auflage},
+	Date-Modified = {2014-11-11 18:45:20 +0000},
+	Number = {2. Auflage},
 	Publisher = {Gesellschaft f{\"u}r Wissenschaftsforschung},
 	Title = {Wissens--Ko--Produktion --- Organisationsinformatik},
 	Year = {2000}}
