--- a/schluss.tex
+++ b/schluss.tex
@@ -7,5 +7,12 @@ In der Analogie zu Erdöl lassen sich die \buzz{Daten} wie in der These beschrie
 Datenschutz ist in diesem Bild vergleichbar mit Umweltschutz, der auf allen Ebenen dafür kämpft, dass die negativen Auswirkungen der neuen Technologie gemindert bzw. eliminiert werden. Wo beim Öl Strände, Seevögel, die Atmosphäre und das Klima geschützt werden, sind es  im Umfeld der Informationstechnologie Bürger--, Grund-- und Persönlichkeitsrechte, die vor übermäßigem und falschem Einsatz der Technologie geschützt werden sollen.
 
 \subsection{Ausblick}
+\label{ausblick}
 
-Nach dieser Einordnung des \buzz{Web 3.0} bietet sich für weitere Arbeiten die genauere Untersuchung der einzelnen Aspekte an, die hier zum großen Teil nur genannt werden konnten. Speziell die automatische Informationserkennung durch Mustererkennung in Texten, Grafiken und Videos und die daraus entstehenden Möglichkeiten sind eine nähere Betrachtung wert. Ebenso die höheren Ebenen des Web 3.0 Stacks, in denen es ebenfalls darum geht, Zusammenhänge rechnergestützt zu erkennen. Durch die Automatisierung der Informationsgewinnung wird diese skalierbar, so wie es die Datenspeicherung heute schon ist. Dies wird die in dieser Arbeit beschriebenen Entwicklungen nochmals deutlich beschleunigen und in ihrer Tragweite vergrößern. Daher empfiehlt sich auch eine gründliche Untersuchung der gesellschaftlichen und politischen Aspekte des Semantischen Webs.
+Nach dieser Einordnung des \buzz{Web 3.0} bietet sich für weitere Arbeiten die genauere Untersuchung der einzelnen Aspekte an, die hier zum großen Teil nur genannt werden konnten. Speziell die automatische Informationserkennung durch Mustererkennung in Texten, Grafiken und Videos und die daraus entstehenden Möglichkeiten sind eine nähere Betrachtung wert. 
+
+Ebenso die höheren Ebenen des Web 3.0 Stacks, in denen es ebenfalls darum geht, Zusammenhänge rechnergestützt zu erkennen. Durch die Automatisierung der Informationsgewinnung wird diese skalierbar, so wie es die Datenspeicherung heute schon ist. Dies wird die in dieser Arbeit beschriebenen Entwicklungen nochmals deutlich beschleunigen und in ihrer Tragweite vergrößern. 
+
+Aufgrund der immensen Datenmenge, die von Technologien rund um das \buzz{Internet of Things}, \buzz{Ubiquitous Computing} oder \buzz{Life Tracking} erfasst werden können bieten sich diese Themengebiete ebenfalls für genauere Studien mit dem Fokus auf der Datenqualität an.
+
+Weiterhin empfiehlt sich auch eine gründliche Untersuchung der gesellschaftlichen und politischen Aspekte des Semantischen Webs.
